docs: updates for schema v5 (#1429)
* update rf4 blog post

* chore: update docs to reflect schema v5

--- a/apps/docs/docs/how-oso-works/index.mdx
+++ b/apps/docs/docs/how-oso-works/index.mdx
@@ -13,7 +13,7 @@ This section introduces some core concepts for understanding how OSO works and w
 
 OSO datasets are built from three primary registries: **collections**, **projects**, and **artifacts**. A **collection** is a group of projects. A **project** is a group of artifacts. An **artifact** is an open source work contribution that belongs to a project. These registries are completely public and maintained in [OSS Directory](https://github.com/opensource-observer/oss-directory).
 
-Critically, a project can belong to many collections but *an artifact may only belong to one project*. A new project is instantiated from a unique slug and  a GitHub URL that is not owned by any other project. These properties are validated whenever a collection, project, or artifact is added to OSS Directory.
+Critically, a project can belong to many collections but *an artifact may only belong to one project*. A new project is instantiated from a unique `name` and a GitHub URL that is not owned by any other project. These properties are validated whenever a collection, project, or artifact is added to OSS Directory.
 
 ![2_artifacts](./2_artifacts.png)
 
